name: ddmin
version: 0.1
description: A Haskell implementation of Zeller's ddmin algorithm for minimizing failing inputs
license: BSD3
license-file: LICENSE
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
build-type: Simple
stability: experimental
category: Debug
cabal-version: >= 1.10

executable ddmin
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: DebugDriver.hs
  ghc-options: -Wall -rtsopts
  ghc-prof-options: -auto-all
  build-depends: base > 4 && < 5, filepath, mtl > 2 && < 3,
                 process, binary, cmdargs >= 0.7 && < 0.8, directory,
                 bytestring, bytestring-class, bytestring-trie,
                 regex-pcre-builtin, split
